--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -10,7 +10,7 @@ img, video{
 input:focus {outline: none;}
 button { background:none; border:0; cursor:pointer; } 
 ul { list-style: none; } 
-a { text-decoration: none;} 
+a { text-decoration: none; cursor: none;} 
 table { border-collapse:collapse; border-spacing:0 } 
 fieldset,input{border: 0;}
 body{
