--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,11 @@ body {
   }
 }
 .footer .inner1 .group-addr div {
+  transition: 0.2s;
   width: 40px;
+}
+.footer .inner1 .group-addr div:hover {
+  transform: scale(1.3);
 }
 @media (max-width: 1023px) {
   .footer .inner1 .group-addr div {
