--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -34,6 +34,10 @@
                 gap: 20px;
             }
             div{
+                transition: 0.2s;
+                &:hover{
+                    transform: scale(1.3);
+                }
                 @include tablet{
                     width: 32px;
                 }
