--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -1,4 +1,4 @@
-* { margin:0; padding:0; font:inherit; color:inherit; cursor: none;} 
+* { margin:0; padding:0; font:inherit; color:inherit; } 
 *, :after, :before { box-sizing:border-box; flex-shrink:0; } 
 :root { -webkit-tap-highlight-color:transparent; -webkit-text-size-adjust:100%; text-size-adjust:100%; cursor:default; line-height:1.5; overflow-wrap:break-word; -moz-tab-size:4; tab-size:4 } 
 html, body { height:100%; line-height: 1; } 
@@ -10,7 +10,7 @@ img, video{
 input:focus {outline: none;}
 button { background:none; border:0; cursor:pointer; } 
 ul { list-style: none; } 
-a { text-decoration: none; cursor: none;} 
+a { text-decoration: none;} 
 table { border-collapse:collapse; border-spacing:0 } 
 fieldset,input{border: 0;}
 body{
